added database support using SQLAlchemy

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,10 +8,20 @@
 	</head>
 	<body>
 		<div>
-			Small Web App: <a href="/index">Home</a>
-			<a href="/login">Login</a>
+			Small Web App: 
+			<a href="{{ url_for('index') }}">Home</a>
+			<a href="{{ url_for('login') }}">Login</a>
 		</div>
 		<hr>
+		{% with messages = get_flashed_messages() %}
+		{% if messages %}
+		<ul>
+			{% for message in messages %}
+			<li>{{ message }}</li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+		{% endwith %}
 		{% block content %}
 		{% endblock %}
 	</body>
